content/riak/kv/3.0.1/index.md
---
title: "Riak KV 3.0.1"
description: ""
project: "riak_kv"
project_version: 3.0.1
menu:
  riak_kv-3.0.1:
    name: "Riak KV"
    identifier: "index"
    weight: 100
    pre: riak
toc: false
aliases:
  - /riak/3.0.1/

---

[aboutenterprise]: https://www.tiot.jp/en/about-us/contact-us/
[config index]: {{<baseurl>}}riak/kv/3.0.1/configuring
[downloads]: {{<baseurl>}}riak/kv/3.0.1/downloads/
[install index]: {{<baseurl>}}riak/kv/3.0.1/setup/installing/
[plan index]: {{<baseurl>}}riak/kv/3.0.1/setup/planning
[perf open files]: {{<baseurl>}}riak/kv/3.0.1/using/performance/open-files-limit
[install debian & ubuntu]: {{<baseurl>}}riak/kv/3.0.1/setup/installing/debian-ubuntu
[usage search]: {{<baseurl>}}riak/kv/3.0.1/developing/usage/search
[getting started]: {{<baseurl>}}riak/kv/3.0.1/developing/getting-started
[dev client libraries]: {{<baseurl>}}riak/kv/3.0.1/developing/client-libraries



Riak KV is a distributed NoSQL database designed to deliver maximum data availability by distributing data across multiple servers. As long as your Riak KV client can reach one Riak server, it should be able to write data.

This release allows Riak to run on OTP versions 20, 21 and 22, but is not fully backwards compatible with previous releases.

** It is not possible to run this release on any OTP version prior to OTP 20. Testing of node-by-node upgrades is the responsibility of Riak customers, there has been no comprehensive testing of this upgrade managed centrally. Most customer testing of upgrades has been spent on testing an uplift from 2.2.x and OTP R16 to 3.0 and OTP 20, so this is likely to be the safest transition.

## Supported Operating Systems

- Amazon Linux 2016.09 (AWS)
- Amazon Linux 2 (AWS)
- CentOS 6
- CentOS 7
- CentOS 8
- Debian 7.0 ("Wheezy")
- Debian 8.0 ("Jessie")
- Debian 9.0 ("Stretch")
- Debian 10.0 ("Buster")
- Red Hat Enterprise Linux 7
- Red Hat Enterprise Linux 8
- Raspbian Buster
- Ubuntu 12.04 ("Precise Pangolin")
- Ubuntu 14.04 ("Trusty Tahr")
- Ubuntu 16.04 ("Xenial Xerus")
- Ubuntu 18.04 ("Bionic Beaver")
- FreeBSD 10.4
- FreeBSD 11.1
- Mac OSX 10.11+ (development only)

## Getting Started

Are you brand new to Riak KV? Start by [downloading][downloads] Riak KV, and then follow the below pages to get started:

1. [Install Riak KV][install index]
2. [Plan your Riak KV setup][plan index]
3. [Configure Riak KV for your needs][config index]

{{% note title="Developing with Riak KV" %}}
If you are looking to integrate Riak KV with your existing tools, check out the [Developing with Riak KV]({{<baseurl>}}riak/kv/3.0.1/developing) docs. They provide instructions and examples for languages such as: Java, Ruby, Python, Go, Haskell, NodeJS, Erlang, and more.
{{% /note %}}

## Popular Docs

1. [Open Files Limit][perf open files]
2. [Installing on Debian-Ubuntu][install debian & ubuntu]
3. [Developing with Riak KV: Searching][usage search]
4. [Developing with Riak KV: Getting Started][getting started]
5. [Developing with Riak KV: Client Libraries][dev client libraries]




